--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.8",
+    "@angular/animations": "^8.2.14",
     "@angular/cdk": "^5.2.5",
     "@angular/common": "~8.2.8",
     "@angular/compiler": "~8.2.8",
@@ -28,6 +28,7 @@
     "jw-angular-social-buttons": "^1.0.0",
     "ng-starrating": "^1.0.7",
     "ngx-image-zoom": "^0.4.1",
+    "ngx-toastr": "^11.2.1",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.3",
     "sweetalert2": "^9.3.6",
